# os-colloq2

./: .gitignore  README.md
SingletonExample/: CMakeLists.txt
SingletonExample/SingletonExample/: CMakeLists.txt  Singleton.h  Source.cpp
